--- a/workflow-templates/cruft.yml
+++ b/workflow-templates/cruft.yml
@@ -14,7 +14,7 @@ jobs:
   cruft:
     permissions:
       contents: write
-      pull-request: write
+      pull-requests: write
 
     runs-on: ubuntu-latest
 
