--- a/workflow-templates/cruft.yml
+++ b/workflow-templates/cruft.yml
@@ -104,7 +104,7 @@ jobs:
           author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
           branch: cruft/update/${{ steps.update-info.outputs.commit_hash }}
           delete-branch: true
-          title: Merge new cruft update of ${{ steps.update-info.outputs.name }}
+          title: Merge ${{ steps.update-info.outputs.name }} cruft update
           body: |
             ### Descripition
             [Cruft](https://github.com/cruft/cruft) has detected updates from [${{ steps.update-info.outputs.name }}](${{ steps.update-info.outputs.link }}).
